<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2013 Mark Injerd

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
	<string name="app_name">L-Clock</string>
	<!-- AlarmReceiver.java -->
	<string name="alert_msg">Rocket launch {0,choice,0#NOW|1#in {0} minute|1&lt;in {0} minutes}!</string>
	<!-- ListActivity.java -->
	<string name="payload">Payload</string>
	<string name="toast_noconn">Error: No connection, unable to refresh.</string>
	<string name="toast_norcv_nocache">Error: No data received and no cache.</string>
	<string name="toast_norcv_loadcache">No data received, loaded from cache.</string>
	<string name="toast_errparse_nocache">Error parsing received data,\nno cache to fall back to.</string>
	<string name="toast_errparse_loadcache">Error parsing received data,\nloaded from cache.</string>
	<string name="toast_errparse_time">Error parsing launch time.</string>
	<string name="toast_pls_contact_if_persist">Please contact developer if error persists.</string>
	<!-- layout/main.xml -->
	<string name="select_src">Select data source to view.</string>
	<string name="nasa">NASA</string>
	<string name="sfn">Spaceflight Now</string>
	<!-- menu/main.xml -->
	<string name="refresh">Refresh</string>
	<string name="preferences">Preferences</string>
	<!-- menu/context_menu.xml -->
	<string name="view_in_map">View location in map</string>
	<!-- layout/list.xml -->
	<string name="mission">Mission</string>
	<string name="vehicle">Vehicle</string>
	<string name="location">Location</string>
	<string name="date">Date</string>
	<string name="time">Time</string>
	<!-- preferences.xml -->
	<string name="notifications">Notifications</string>
	<string name="alert_time">Alert Time</string>
	<string name="alert_time_summary">How long before a launch to give alert.</string>
	<string name="alert_time_dlg_title">Alert in minutes</string>
	<string name="alert_time_dlg_msg">Leave blank to disable alerts.</string>
	<string name="ringtone">Ringtone</string>
	<string name="vibrate">Vibrate</string>
</resources>
