<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/notifications">
		<EditTextPreference
			android:key="alertTime"
			android:title="@string/alert_time"
			android:summary="@string/alert_time_summary"
			android:dialogTitle="@string/alert_time_dlg_title"
			android:dialogMessage="@string/alert_time_dlg_msg"
			android:defaultValue="10"
			android:inputType="phone"
			android:digits="0123456789 " />
		<RingtonePreference
			android:key="ring"
			android:title="@string/ringtone"
			android:ringtoneType="notification"
			android:showSilent="true" />
		<CheckBoxPreference
			android:key="vibrate"
			android:title="@string/vibrate"
			android:defaultValue="true" />
	</PreferenceCategory>
</PreferenceScreen>